thesis: Fix bibliography warnings

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -38,7 +38,7 @@
     version = {2.2},
     author = {Andrew Waterman and Krste Asanovi\'c},
     organization = {RISC-V Foundation},
-    month = {May},
+    month = {5},
     year = {2017}
 }
 
@@ -47,7 +47,7 @@
     version = {1.10},
     author = {Andrew Waterman and Krste Asanovi\'c},
     organization = {RISC-V Foundation},
-    month = {May},
+    month = {5},
     year = {2017}
 }
 
@@ -63,7 +63,7 @@
     title={The {RISC-V} Instruction Set Manual, {V}olume {I}: Base User-Level {ISA}},
     institution={EECS Department, University of California at Berkeley},
     number={UCB/EECS-2011-62},
-    month={May},
+    month={5},
     year={2011}
 }
 
@@ -118,7 +118,7 @@
     title = {Intel\textsuperscript{\textregistered} 64 and IA-32 Architectures Software Developer's Manual Volume 3 (3A, 3B, 3C \& 3D): System Programming Guide},
     note = {Order Number: 325384-060US},
     organization = {Intel},
-    month = {September},
+    month = {9},
     year = {2016}
 }
 
@@ -169,7 +169,7 @@
     author = {Wojtczuk, Rafal and Rutkowska, Joanna},
     title = {Attacking SMM Memory via Intel CPU Cache Poisoning},
     year = {2009},
-    month = {March},
+    month = {3},
     howpublished = {Online},
     url = {https://invisiblethingslab.com/resources/misc09/smm_cache_fun.pdf}
 }
@@ -185,7 +185,7 @@
     author = {Dunlap, George},
     title = {The Intel SYSRET Privilege Escalation},
     year = {2012},
-    month = {June},
+    month = {6},
     url = {https://xenproject.org/2012/06/13/the-intel-sysret-privilege-escalation/},
     organization = {Xen Project},
     urldate = {2019-09-17}
@@ -195,7 +195,7 @@
     title = {FreeBSD-SA-12:04.sysret Security Advisory},
     organization = {The FreeBSD Project},
     year = {2012},
-    month = {July},
+    month = {7},
     url={https://www.freebsd.org/security/advisories/FreeBSD-SA-12:04.sysret.asc},
     urldate={2019-09-17}
 }
@@ -204,7 +204,7 @@
     title = {Debian Security Advisory DSA-2508-1 kfreebsd-8 -- privilege escalation},
     organization = {debian},
     year = {2012},
-    month = {July},
+    month = {7},
     url={https://www.debian.org/security/2012/dsa-2508},
     urldate={2019-09-17}
 }
@@ -214,7 +214,7 @@
     subtitle = {Vulnerability Note VU\#649219},
     organization = {CERT Coordination Center},
     year = {2012},
-    month = {July},
+    month = {7},
     url={https://www.kb.cert.org/vuls/id/649219/},
     urldate={2019-09-17}
 }
@@ -224,7 +224,7 @@
     subtitle = {Vulnerabilities in Windows Kernel Could Allow Elevation of Privilege (2711167)},
     organization = {Microsoft Corporation},
     year = {2012},
-    month = {July},
+    month = {7},
     url={https://docs.microsoft.com/en-us/security-updates/SecurityBulletins/2012/ms12-042},
     urldate={2019-09-17}
 }
@@ -244,7 +244,7 @@
     journal = {Proceedings of the ACM on Programming Languages},
     volume = {1},
     number = {OOPSLA},
-    month = {October},
+    month = {10},
     year = {2017},
     issn = {2475-1421},
     pages = {88:1-88:24},
@@ -333,7 +333,7 @@
     number={7},
     pages={1148-1161},
     doi={10.1109/TCAD.2015.2422836},
-    month={July},
+    month={7},
 }
 
 @inproceedings{Berezin98,
@@ -399,7 +399,7 @@
     keywords={Microprocessors;Switches;Circuit simulation;Registers;Switching circuits;Formal verification;Pipeline processing;Circuit testing;Laboratories;Timing},
     doi={10.1145/196244.196575},
     ISSN={},
-    month={June},
+    month={6},
 }
 
 @book{Patterson13,
@@ -487,7 +487,7 @@
     title = {A liveness checking algorithm that counts},
     year = {2012},
     pages = {52-59},
-    month = {October},
+    month = {10},
 }
 
 @InProceedings{Bradley11,
@@ -528,7 +528,7 @@
 @Online{Piano,
     title = {The Piano Test for Program Verification},
     author = {Regehr, John},
-    date = {27 January 2011},
+    date = {2011-01-27},
     url = {https://blog.regehr.org/archives/364},
     urldate = {2019-11-27},
 }
@@ -619,7 +619,7 @@
     pages = {11-20},
     doi = {10.1109/SP.1982.10014},
     ISSN = {1540-7993},
-    month = {April},
+    month = {4},
 }
 
 @InProceedings{Lipp2018meltdown,
@@ -650,7 +650,7 @@
     year={2016},
     pages={1156-1159},
     ISSN={1558-1101},
-    month={March},
+    month={3},
 }
 
 @InProceedings{Krieg14,
@@ -661,24 +661,14 @@
     pages={729-734},
     doi={10.1109/HPCC.2014.112},
     ISSN={null},
-    month={Aug},
+    month={8},
 }
 
 @Online{ArmHistory,
     author = {Walshe, Ben},
     title = {A Brief History of Arm: Part 1},
     year = {2015},
-    month = {April},
-    url = {https://community.arm.com/developer/ip-products/processors/b/processors-ip-blog/posts/a-brief-history-of-arm-part-1},
-    organization = {Arm Ltd},
-    urldate = {2020-02-14}
-}
-
-@Online{ArmHistory,
-    author = {Walshe, Ben},
-    title = {A Brief History of Arm: Part 1},
-    year = {2015},
-    month = {April},
+    month = {4},
     url = {https://community.arm.com/developer/ip-products/processors/b/processors-ip-blog/posts/a-brief-history-of-arm-part-1},
     organization = {Arm Ltd},
     urldate = {2020-02-14}
