thesis: Misc fixes

--- a/thesis/defs/acronyms.tex
+++ b/thesis/defs/acronyms.tex
@@ -8,7 +8,7 @@
 \newacronym{csr}{CSR}{control and status register}
 \newacronym{abi}{ABI}{application binary interface}
 \newacronym{aee}{AEE}{application execution environment}
-\newacronym[shortplural=OSes,longplural=operating systems (OSes)]{os}{OS}{operating system}
+\newacronym[shortplural=OSes,longplural=operating systems]{os}{OS}{operating system}
 \newacronym{sbi}{SBI}{supervisor binary interface}
 \newacronym{see}{SEE}{supervisor execution environment}
 \newacronym{rsa}{RSA}{Rivest–Shamir–Adleman}
