--- a/thesis/preface/abstract.tex
+++ b/thesis/preface/abstract.tex
@@ -2,8 +2,8 @@
 
 This thesis proposes an approach to formally verifying \glspl{isa} against higher-level properties using the model checker nuXmv.
 This was first proposed by \cite{Reid17}.
-We use model checker nuXmv to perform information flow tracking in the architecture.
-Thus the higher-level properties will be given by information flow properties.
+We use nuXmv to perform information flow tracking at architecture level.
+Thus, the higher-level properties will be given by information flow properties.
 The concepts behind information flow tracking stem from \cite{Ferraiuolo17} where \gls{ifc} was applied to \glspl{hdl}.
 
 The threat model that is assumed in this thesis is that user-mode is adversarial to machine-mode and wholly compromised.
