--- a/thesis/sections/conclusion.tex
+++ b/thesis/sections/conclusion.tex
@@ -6,7 +6,7 @@
 Find an overview of this thesis as a whole in figure \ref{fig:overview}.
 As a first step, the MINRV8 architecture inspired by the RISC-V architecture was defined and implemented in nuXmv in section \ref{sec:minrv8}.
 In chapter \ref{chp:ifc}, information flow semantics and three information flow properties forming an information flow control in spirit of the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} were developed.
-The information flow semantics were used to augmented the model of the MINRV8 by information flow tracking.
+The information flow semantics was used to augment the model of the MINRV8 by information flow tracking.
 In chapter \ref{chp:results} eight assumptions that, when implemented software running in machine-mode, guarantee the absence of vulnerabilities covered by aforementioned information flow properties were presented.
 Our model, the properties and the assumptions were evaluated by showing that taken together, they manage to detect both the cache poisoning \cite{Wojtczuk09} and the SYSRET vulnerability \cite{Dunlap19}.
 Finally in chapter \ref{chp:discussion}, the limitations and the scope of our work were discussed and it was reflected whether our methodology is trustworthy.
@@ -42,6 +42,6 @@ Before a final summary of what has been achieved in this thesis will be given, w
 Finally, the main contribution of this thesis is a new approach the verifying \glspl{isa} by higher-level information flow properties using a model checker.
 This approach promises to take into account unbounded numbers of transitions, i.e. instructions, is non-redundant and architecture independent and results in either architectural changes to combat vulnerabilities or rules for, e.g. \gls{os} or compiler engineers that are: \textit{practical} and \textit{verifiable themselves}, \textit{concise}, and \textit{stable}.
 
-This approach was applied to the MINRV8 to implement a prototype.
+This approach was applied to the MINRV8 architecture to implement a prototype.
 During this, three properties were found that lead to eight rules being stated.
-These properties were broad enough to cover the cache poisoning and SYSRET vulnerabilities which both applied to the x86.
+These properties were broad enough to cover the cache poisoning and SYSRET vulnerabilities which both applied to the x86 architecture.
